--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.12.7",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
